avance 46